PUB-1619 - Enable fortify on nightly (#410)