@@ -192,6 +192,13 @@ dependencies {
   testImplementation group: 'com.redis', name: 'testcontainers-redis', version: '1.7.0'
   testImplementation group: 'org.testcontainers', name: 'junit-jupiter'
   testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.9.1'
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.0'
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 mainClassName = 'uk.gov.hmcts.reform.pip.publication.services.Application'
